--- a/style.css
+++ b/style.css
@@ -602,6 +602,9 @@ body .wraper .feedback .background_images img:nth-child(2) {
   left: 74.42%;
   top: 38.07%;
 }
+body .wraper .feedback .background_images img:nth-child(3) {
+  display: none;
+}
 body .wraper .feedback .container {
   text-align: center;
   display: flex;
@@ -1143,5 +1146,444 @@ body .wraper .footer .container .information h3 {
     font-weight: 400;
     font-size: 18px;
     line-height: 31.5px;
+  }
+}
+@media screen and (max-width: 640px) {
+  body .wraper {
+    max-width: 640px;
+  }
+  body .wraper .nav .container {
+    width: 460px;
+  }
+  body .wraper .order_header {
+    max-width: 640px;
+  }
+  body .wraper .order_header .background_images img:nth-child(1) {
+    display: none;
+  }
+  body .wraper .order_header .background_images img:nth-child(2) {
+    width: 100px;
+    left: 0%;
+    top: 3.46%;
+  }
+  body .wraper .order_header .background_images img:nth-child(3) {
+    top: 40%;
+    left: 3.5%;
+  }
+  body .wraper .order_header .background_images img:nth-child(4) {
+    width: 80px;
+    left: 35.11%;
+    top: 2.02%;
+  }
+  body .wraper .order_header .background_images img:nth-child(5) {
+    right: 0%;
+    top: 3.46%;
+  }
+  body .wraper .order_header .background_images img:nth-child(6) {
+    left: 45.68%;
+    top: 40.45%;
+  }
+  body .wraper .order_header .background_images img:nth-child(7) {
+    left: 6.77%;
+    top: 5.46%;
+    transform: rotate(15deg);
+  }
+  body .wraper .order_header .background_images img:nth-child(8) {
+    width: 200px;
+    left: 50.17%;
+    top: 15.42%;
+  }
+  body .wraper .order_header .background_images img:nth-child(9) {
+    left: 69.17%;
+    top: 28.42%;
+  }
+  body .wraper .order_header .background_images img:nth-child(10) {
+    left: 80.17%;
+    top: 23.42%;
+  }
+  body .wraper .order_header .background_images img:nth-child(11) {
+    width: 150px;
+    left: 65.4%;
+    top: 33.86%;
+  }
+  body .wraper .order_header .container {
+    width: 460px;
+  }
+  body .wraper .order_header .container .order_header-item {
+    margin-top: 521px;
+  }
+  body .wraper .order_header .container .order_header-item .order_header-title h1 {
+    font-size: 42px;
+  }
+  body .wraper .order_header .container .order_header-item .order_header-description {
+    max-width: 460px;
+  }
+  body .wraper .order_header .container .order_header-item .order_header-button {
+    margin-bottom: 140px;
+    display: flex;
+    justify-content: center;
+  }
+  body .wraper .order_header .container .order_header-item .order_header-button a {
+    padding: 22.5px 185px;
+  }
+  body .wraper .services {
+    max-width: 640px;
+  }
+  body .wraper .services .background_images img {
+    display: none;
+  }
+  body .wraper .services .container {
+    max-width: 460px;
+  }
+  body .wraper .services .container .services_title {
+    margin-top: 80px;
+  }
+  body .wraper .services .container .services_description .services_item {
+    max-width: 460px;
+  }
+  body .wraper .stages {
+    max-width: 640px;
+  }
+  body .wraper .stages .background_images img:nth-child(1) {
+    left: 3.94%;
+    top: 3.37%;
+  }
+  body .wraper .stages .background_images img:nth-child(2) {
+    display: none;
+  }
+  body .wraper .stages .container {
+    width: 460px;
+  }
+  body .wraper .stages .container .stages_title {
+    margin-top: 80px;
+  }
+  body .wraper .stages .container .stages_main .stages_item {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-bottom: 54px;
+  }
+  body .wraper .stages .container .stages_buttons {
+    display: flex;
+    justify-content: center;
+    gap: 107px;
+    margin-bottom: 50px;
+  }
+  body .wraper .stages .container .stages_buttons button {
+    width: 60px;
+    height: 60px;
+  }
+  body .wraper .examples {
+    max-width: 640px;
+  }
+  body .wraper .examples .container {
+    width: 460px;
+  }
+  body .wraper .examples .container .examples_title {
+    margin-top: 80px;
+  }
+  body .wraper .examples .container .examples_item {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 80px;
+  }
+  body .wraper .examples .container .examples_item .examples_image-block {
+    width: 460px;
+    height: 407px;
+  }
+  body .wraper .examples .container .examples_item .examples_image-block .examples_image {
+    width: 460px;
+    height: 407px;
+  }
+  body .wraper .examples .container .examples_item .examples_image-block .examples_description {
+    width: 460px;
+    height: 407px;
+  }
+  body .wraper .information {
+    max-width: 640px;
+  }
+  body .wraper .information .background_images img:nth-child(1) {
+    left: 80.94%;
+    top: 0.37%;
+  }
+  body .wraper .information .background_images img:nth-child(2) {
+    left: 30.42%;
+    top: 20.07%;
+    width: 301.58px;
+    height: 231.5px;
+  }
+  body .wraper .information .container {
+    width: 460px;
+  }
+  body .wraper .information .container .title {
+    margin-top: 80px;
+    text-align: center;
+    margin-bottom: 238px;
+  }
+  body .wraper .information .container .description {
+    width: 460px;
+    padding-top: 20px;
+  }
+  body .wraper .information .container .button {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 60px;
+  }
+  body .wraper .feedback {
+    max-width: 960px;
+  }
+  body .wraper .feedback .background_images img:nth-child(1) {
+    display: none;
+  }
+  body .wraper .feedback .background_images img:nth-child(2) {
+    display: none;
+  }
+  body .wraper .feedback .background_images img:nth-child(3) {
+    display: block;
+    left: 30.42%;
+    top: 67.07%;
+  }
+  body .wraper .feedback .container {
+    width: 460px;
+  }
+  body .wraper .feedback .container .feedback_form {
+    margin-bottom: 400px;
+  }
+  body .wraper .footer {
+    max-width: 640px;
+  }
+  body .wraper .footer .container {
+    width: 460px;
+  }
+  body .wraper .footer .container .contacts {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    gap: 30px;
+  }
+  body .wraper .footer .container .information {
+    margin-bottom: 152px;
+  }
+}
+@media screen and (max-width: 460px) {
+  body .wraper {
+    max-width: 460px;
+  }
+  body .wraper .nav .container {
+    width: 375px;
+    padding: 0 20px;
+  }
+  body .wraper .nav .container .nav_main .nav_logo img {
+    width: 136px;
+    height: 35px;
+  }
+  body .wraper .order_header {
+    max-width: 375px;
+  }
+  body .wraper .order_header .background_images img:nth-child(1) {
+    display: none;
+  }
+  body .wraper .order_header .background_images img:nth-child(2) {
+    width: 100px;
+    left: 0%;
+    top: 3.46%;
+  }
+  body .wraper .order_header .background_images img:nth-child(3) {
+    top: 40%;
+    left: 3.5%;
+  }
+  body .wraper .order_header .background_images img:nth-child(4) {
+    width: 80px;
+    left: 35.11%;
+    top: 2.02%;
+  }
+  body .wraper .order_header .background_images img:nth-child(5) {
+    right: 0%;
+    top: 3.46%;
+  }
+  body .wraper .order_header .background_images img:nth-child(6) {
+    left: 45.68%;
+    top: 40.45%;
+  }
+  body .wraper .order_header .background_images img:nth-child(7) {
+    left: 6.77%;
+    top: 5.46%;
+    transform: rotate(15deg);
+  }
+  body .wraper .order_header .background_images img:nth-child(8) {
+    width: 200px;
+    left: 50.17%;
+    top: 15.42%;
+  }
+  body .wraper .order_header .background_images img:nth-child(9) {
+    left: 69.17%;
+    top: 28.42%;
+  }
+  body .wraper .order_header .background_images img:nth-child(10) {
+    left: 80.17%;
+    top: 23.42%;
+  }
+  body .wraper .order_header .background_images img:nth-child(11) {
+    width: 150px;
+    left: 65.4%;
+    top: 33.86%;
+  }
+  body .wraper .order_header .container {
+    width: 375px;
+    padding: 0 20px;
+  }
+  body .wraper .order_header .container .order_header-item {
+    margin-top: 521px;
+  }
+  body .wraper .order_header .container .order_header-item .order_header-title h1 {
+    font-size: 27px;
+    line-height: 32.4px;
+  }
+  body .wraper .order_header .container .order_header-item .order_header-description {
+    max-width: 460px;
+  }
+  body .wraper .order_header .container .order_header-item .order_header-button {
+    margin-bottom: 140px;
+    display: flex;
+    justify-content: center;
+  }
+  body .wraper .order_header .container .order_header-item .order_header-button a {
+    padding: 22.5px 125px;
+  }
+  body .wraper .services {
+    max-width: 640px;
+  }
+  body .wraper .services .background_images img {
+    display: none;
+  }
+  body .wraper .services .container {
+    max-width: 460px;
+  }
+  body .wraper .services .container .services_title {
+    margin-top: 80px;
+  }
+  body .wraper .services .container .services_description .services_item {
+    max-width: 460px;
+  }
+  body .wraper .stages {
+    max-width: 640px;
+  }
+  body .wraper .stages .background_images img:nth-child(1) {
+    left: 3.94%;
+    top: 3.37%;
+  }
+  body .wraper .stages .background_images img:nth-child(2) {
+    display: none;
+  }
+  body .wraper .stages .container {
+    width: 460px;
+  }
+  body .wraper .stages .container .stages_title {
+    margin-top: 80px;
+  }
+  body .wraper .stages .container .stages_main .stages_item {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-bottom: 54px;
+  }
+  body .wraper .stages .container .stages_buttons {
+    display: flex;
+    justify-content: center;
+    gap: 107px;
+    margin-bottom: 50px;
+  }
+  body .wraper .stages .container .stages_buttons button {
+    width: 60px;
+    height: 60px;
+  }
+  body .wraper .examples {
+    max-width: 640px;
+  }
+  body .wraper .examples .container {
+    width: 460px;
+  }
+  body .wraper .examples .container .examples_title {
+    margin-top: 80px;
+  }
+  body .wraper .examples .container .examples_item {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 80px;
+  }
+  body .wraper .examples .container .examples_item .examples_image-block {
+    width: 460px;
+    height: 407px;
+  }
+  body .wraper .examples .container .examples_item .examples_image-block .examples_image {
+    width: 460px;
+    height: 407px;
+  }
+  body .wraper .examples .container .examples_item .examples_image-block .examples_description {
+    width: 460px;
+    height: 407px;
+  }
+  body .wraper .information {
+    max-width: 640px;
+  }
+  body .wraper .information .background_images img:nth-child(1) {
+    left: 80.94%;
+    top: 0.37%;
+  }
+  body .wraper .information .background_images img:nth-child(2) {
+    left: 30.42%;
+    top: 20.07%;
+    width: 301.58px;
+    height: 231.5px;
+  }
+  body .wraper .information .container {
+    width: 460px;
+  }
+  body .wraper .information .container .title {
+    margin-top: 80px;
+    text-align: center;
+    margin-bottom: 238px;
+  }
+  body .wraper .information .container .description {
+    width: 460px;
+    padding-top: 20px;
+  }
+  body .wraper .information .container .button {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 60px;
+  }
+  body .wraper .feedback {
+    max-width: 960px;
+  }
+  body .wraper .feedback .background_images img:nth-child(1) {
+    display: none;
+  }
+  body .wraper .feedback .background_images img:nth-child(2) {
+    display: none;
+  }
+  body .wraper .feedback .background_images img:nth-child(3) {
+    display: block;
+    left: 30.42%;
+    top: 67.07%;
+  }
+  body .wraper .feedback .container {
+    width: 460px;
+  }
+  body .wraper .feedback .container .feedback_form {
+    margin-bottom: 400px;
+  }
+  body .wraper .footer {
+    max-width: 640px;
+  }
+  body .wraper .footer .container {
+    width: 460px;
+  }
+  body .wraper .footer .container .contacts {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    gap: 30px;
+  }
+  body .wraper .footer .container .information {
+    margin-bottom: 152px;
   }
 }
