--- a/style.css
+++ b/style.css
@@ -1377,7 +1377,8 @@ body .wraper .footer .container .information h3 {
     height: 35px;
   }
   body .wraper .order_header {
-    max-width: 375px;
+    max-width: 460px;
+    margin: 0 auto;
   }
   body .wraper .order_header .background_images img:nth-child(1) {
     display: none;
@@ -1397,6 +1398,7 @@ body .wraper .footer .container .information h3 {
     top: 2.02%;
   }
   body .wraper .order_header .background_images img:nth-child(5) {
+    width: 300px;
     right: 0%;
     top: 3.46%;
   }
@@ -1447,113 +1449,133 @@ body .wraper .footer .container .information h3 {
     justify-content: center;
   }
   body .wraper .order_header .container .order_header-item .order_header-button a {
-    padding: 22.5px 125px;
+    padding: 22.5px 122px;
   }
   body .wraper .services {
-    max-width: 640px;
+    max-width: 460px;
   }
   body .wraper .services .background_images img {
     display: none;
   }
   body .wraper .services .container {
-    max-width: 460px;
+    width: 375px;
+    padding: 0 20px;
   }
   body .wraper .services .container .services_title {
-    margin-top: 80px;
+    margin-top: 16px;
+    margin-bottom: 17px;
+  }
+  body .wraper .services .container .services_title h3 {
+    font-size: 23px;
+    line-height: 34.5px;
+  }
+  body .wraper .services .container .services_description {
+    margin-bottom: 30px;
   }
   body .wraper .services .container .services_description .services_item {
-    max-width: 460px;
+    max-width: 375px;
+  }
+  body .wraper .services .container .services_description .services_item .main_block-description .title_description .title p {
+    font-size: 17px;
+    line-height: 29.75px;
   }
   body .wraper .stages {
-    max-width: 640px;
+    max-width: 460px;
   }
   body .wraper .stages .background_images img:nth-child(1) {
     left: 3.94%;
-    top: 3.37%;
+    top: 0.37%;
   }
   body .wraper .stages .background_images img:nth-child(2) {
     display: none;
   }
   body .wraper .stages .container {
-    width: 460px;
+    width: 375px;
+    padding: 0 20px;
   }
   body .wraper .stages .container .stages_title {
-    margin-top: 80px;
+    margin-top: 42px;
+    margin-bottom: 42px;
+  }
+  body .wraper .stages .container .stages_title h3 {
+    font-size: 23px;
+    line-height: 34px;
   }
   body .wraper .stages .container .stages_main .stages_item {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    margin-bottom: 54px;
+    max-width: 335px;
+    padding: 20px;
   }
-  body .wraper .stages .container .stages_buttons {
-    display: flex;
-    justify-content: center;
-    gap: 107px;
-    margin-bottom: 50px;
+  body .wraper .stages .container .stages_main .stages_item .rewiev {
+    margin-right: 0;
   }
-  body .wraper .stages .container .stages_buttons button {
-    width: 60px;
-    height: 60px;
+  body .wraper .stages .container .stages_main .stages_item .rewiev .description {
+    width: 275px;
   }
   body .wraper .examples {
-    max-width: 640px;
+    max-width: 460px;
   }
   body .wraper .examples .container {
-    width: 460px;
+    width: 375px;
   }
   body .wraper .examples .container .examples_title {
-    margin-top: 80px;
+    margin-top: 23px;
+    margin-bottom: 15px;
+  }
+  body .wraper .examples .container .examples_title h3 {
+    font-size: 23px;
+    line-height: 34.5px;
   }
   body .wraper .examples .container .examples_item {
     display: flex;
     justify-content: center;
-    margin-bottom: 80px;
+    margin-bottom: 30px;
   }
   body .wraper .examples .container .examples_item .examples_image-block {
-    width: 460px;
-    height: 407px;
+    width: 375px;
+    height: 375px;
   }
   body .wraper .examples .container .examples_item .examples_image-block .examples_image {
-    width: 460px;
-    height: 407px;
+    width: 375px;
+    height: 375px;
   }
   body .wraper .examples .container .examples_item .examples_image-block .examples_description {
-    width: 460px;
-    height: 407px;
+    width: 375px;
+    height: 375px;
   }
   body .wraper .information {
-    max-width: 640px;
+    max-width: 460px;
   }
   body .wraper .information .background_images img:nth-child(1) {
     left: 80.94%;
     top: 0.37%;
   }
   body .wraper .information .background_images img:nth-child(2) {
-    left: 30.42%;
+    left: 20.42%;
     top: 20.07%;
-    width: 301.58px;
-    height: 231.5px;
   }
   body .wraper .information .container {
-    width: 460px;
+    width: 375px;
+    padding: 0 20px;
   }
   body .wraper .information .container .title {
-    margin-top: 80px;
-    text-align: center;
-    margin-bottom: 238px;
+    margin-top: 43px;
+    margin-bottom: 268px;
+  }
+  body .wraper .information .container .title h3 {
+    font-size: 23px;
+    line-height: 34px;
   }
   body .wraper .information .container .description {
-    width: 460px;
-    padding-top: 20px;
+    width: 335px;
   }
   body .wraper .information .container .button {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 60px;
+    margin-bottom: 50px;
+  }
+  body .wraper .information .container .button button {
+    padding: 22.5px 88px;
   }
   body .wraper .feedback {
-    max-width: 960px;
+    max-width: 460px;
   }
   body .wraper .feedback .background_images img:nth-child(1) {
     display: none;
@@ -1562,21 +1584,42 @@ body .wraper .footer .container .information h3 {
     display: none;
   }
   body .wraper .feedback .background_images img:nth-child(3) {
-    display: block;
-    left: 30.42%;
-    top: 67.07%;
+    left: 20.42%;
+    top: 61.07%;
   }
   body .wraper .feedback .container {
-    width: 460px;
+    width: 375px;
+  }
+  body .wraper .feedback .container .title {
+    text-align: center;
+    margin-top: 42px;
+    margin-bottom: 17px;
+  }
+  body .wraper .feedback .container .description {
+    text-align: center;
+    max-width: 375px;
+  }
+  body .wraper .feedback .container .description p {
+    font-size: 17px;
+    line-height: 29.75px;
   }
   body .wraper .feedback .container .feedback_form {
+    width: 375px;
+    align-items: center;
     margin-bottom: 400px;
   }
+  body .wraper .feedback .container .feedback_form .input_field {
+    width: 355px;
+  }
+  body .wraper .feedback .container .feedback_form .submit {
+    margin-top: 0px;
+    width: 355px;
+  }
   body .wraper .footer {
-    max-width: 640px;
+    max-width: 460px;
   }
   body .wraper .footer .container {
-    width: 460px;
+    width: 375px;
   }
   body .wraper .footer .container .contacts {
     margin-top: 50px;
