--- a/style.css
+++ b/style.css
@@ -1389,7 +1389,7 @@ body .wraper .footer .container .information h3 {
     top: 3.46%;
   }
   body .wraper .order_header .background_images img:nth-child(3) {
-    top: 40%;
+    top: 32%;
     left: 3.5%;
   }
   body .wraper .order_header .background_images img:nth-child(4) {
@@ -1398,34 +1398,36 @@ body .wraper .footer .container .information h3 {
     top: 2.02%;
   }
   body .wraper .order_header .background_images img:nth-child(5) {
-    width: 300px;
+    width: 250px;
     right: 0%;
     top: 3.46%;
   }
   body .wraper .order_header .background_images img:nth-child(6) {
-    left: 45.68%;
-    top: 40.45%;
+    left: 35.68%;
+    top: 36.45%;
   }
   body .wraper .order_header .background_images img:nth-child(7) {
+    width: 300px;
     left: 6.77%;
     top: 5.46%;
     transform: rotate(15deg);
   }
   body .wraper .order_header .background_images img:nth-child(8) {
-    width: 200px;
-    left: 50.17%;
-    top: 15.42%;
+    width: 150px;
+    left: 57.17%;
+    top: 14.42%;
   }
   body .wraper .order_header .background_images img:nth-child(9) {
-    left: 69.17%;
-    top: 28.42%;
+    width: 50px;
+    left: 78.17%;
+    top: 7.42%;
   }
   body .wraper .order_header .background_images img:nth-child(10) {
     left: 80.17%;
     top: 23.42%;
   }
   body .wraper .order_header .background_images img:nth-child(11) {
-    width: 150px;
+    width: 100px;
     left: 65.4%;
     top: 33.86%;
   }
@@ -1434,7 +1436,7 @@ body .wraper .footer .container .information h3 {
     padding: 0 20px;
   }
   body .wraper .order_header .container .order_header-item {
-    margin-top: 521px;
+    margin-top: 401px;
   }
   body .wraper .order_header .container .order_header-item .order_header-title h1 {
     font-size: 27px;
@@ -1483,6 +1485,7 @@ body .wraper .footer .container .information h3 {
     max-width: 460px;
   }
   body .wraper .stages .background_images img:nth-child(1) {
+    width: 40px;
     left: 3.94%;
     top: 0.37%;
   }
@@ -1503,7 +1506,9 @@ body .wraper .footer .container .information h3 {
   }
   body .wraper .stages .container .stages_main .stages_item {
     max-width: 335px;
-    padding: 20px;
+    height: 500px;
+    padding: 10px;
+    margin-bottom: 25px;
   }
   body .wraper .stages .container .stages_main .stages_item .rewiev {
     margin-right: 0;
@@ -1511,11 +1516,16 @@ body .wraper .footer .container .information h3 {
   body .wraper .stages .container .stages_main .stages_item .rewiev .description {
     width: 275px;
   }
+  body .wraper .stages .container .stages_main .stages_item .stages_image img {
+    width: 200px;
+    height: 200px;
+  }
   body .wraper .examples {
     max-width: 460px;
   }
   body .wraper .examples .container {
     width: 375px;
+    padding: 0 20px;
   }
   body .wraper .examples .container .examples_title {
     margin-top: 23px;
@@ -1531,27 +1541,28 @@ body .wraper .footer .container .information h3 {
     margin-bottom: 30px;
   }
   body .wraper .examples .container .examples_item .examples_image-block {
-    width: 375px;
-    height: 375px;
+    width: 335px;
+    height: 335px;
   }
   body .wraper .examples .container .examples_item .examples_image-block .examples_image {
-    width: 375px;
-    height: 375px;
+    width: 335px;
+    height: 335px;
   }
   body .wraper .examples .container .examples_item .examples_image-block .examples_description {
-    width: 375px;
-    height: 375px;
+    width: 335px;
+    height: 335px;
   }
   body .wraper .information {
     max-width: 460px;
   }
   body .wraper .information .background_images img:nth-child(1) {
+    width: 40px;
     left: 80.94%;
     top: 0.37%;
   }
   body .wraper .information .background_images img:nth-child(2) {
-    left: 20.42%;
-    top: 20.07%;
+    left: 13.42%;
+    top: 15.07%;
   }
   body .wraper .information .container {
     width: 375px;
@@ -1559,7 +1570,7 @@ body .wraper .footer .container .information h3 {
   }
   body .wraper .information .container .title {
     margin-top: 43px;
-    margin-bottom: 268px;
+    margin-bottom: 228px;
   }
   body .wraper .information .container .title h3 {
     font-size: 23px;
@@ -1628,5 +1639,6 @@ body .wraper .footer .container .information h3 {
   }
   body .wraper .footer .container .information {
     margin-bottom: 152px;
+    text-align: center;
   }
 }
