--- a/style.scss
+++ b/style.scss
@@ -1818,7 +1818,7 @@ body {
                         }
 
                         &:nth-child(3) {
-                            top: 40%;
+                            top: 32%;
                             left: 3.5%;
                         }
 
@@ -1829,17 +1829,18 @@ body {
                         }
 
                         &:nth-child(5) {
-                            width: 300px;
+                            width: 250px;
                             right: 0%;
                             top: 3.46%;
                         }
 
                         &:nth-child(6) {
-                            left: 45.68%;
-                            top: 40.45%;
+                            left: 35.68%;
+                            top: 36.45%;
                         }
 
                         &:nth-child(7) {
+                            width: 300px;
                             left: 6.77%;
                             top: 5.46%;
                             transform: rotate(15deg);
@@ -1847,14 +1848,15 @@ body {
                         }
 
                         &:nth-child(8) {
-                            width: 200px;
-                            left: 50.17%;
-                            top: 15.42%;
+                            width: 150px;
+                            left: 57.17%;
+                            top: 14.42%;
                         }
 
                         &:nth-child(9) {
-                            left: 69.17%;
-                            top: 28.42%;
+                            width: 50px;
+                            left: 78.17%;
+                            top: 7.42%;
                         }
 
                         &:nth-child(10) {
@@ -1863,7 +1865,7 @@ body {
                         }
 
                         &:nth-child(11) {
-                            width: 150px;
+                            width: 100px;
                             left: 65.4%;
                             top: 33.86%;
                         }
@@ -1875,7 +1877,7 @@ body {
                     padding: 0 20px;
 
                     .order_header-item {
-                        margin-top: 521px;
+                        margin-top: 401px;
 
                         .order_header-title {
                             h1 {
@@ -1952,6 +1954,7 @@ body {
                     img {
 
                         &:nth-child(1) {
+                            width: 40px;
                             left: 3.94%;
                             top: 0.37%;
                         }
@@ -1980,13 +1983,22 @@ body {
                     .stages_main {
                         .stages_item {
                             max-width: 335px;
-                            padding: 20px;
+                            height: 500px;
+                            padding: 10px;
+                            margin-bottom: 25px;
 
                             .rewiev {
                                 margin-right: 0;
 
                                 .description {
                                     width: 275px;
+                                }
+                            }
+
+                            .stages_image {
+                                img {
+                                    width: 200px;
+                                    height: 200px;
                                 }
                             }
                         }
@@ -1999,6 +2011,7 @@ body {
 
                 .container {
                     width: 375px;
+                    padding: 0 20px;
 
                     .examples_title {
                         margin-top: 23px;
@@ -2017,17 +2030,17 @@ body {
                         margin-bottom: 30px;
 
                         .examples_image-block {
-                            width: 375px;
-                            height: 375px;
+                            width: 335px;
+                            height: 335px;
 
                             .examples_image {
-                                width: 375px;
-                                height: 375px;
+                                width: 335px;
+                                height: 335px;
                             }
 
                             .examples_description {
-                                width: 375px;
-                                height: 375px;
+                                width: 335px;
+                                height: 335px;
                             }
                         }
                     }
@@ -2041,13 +2054,14 @@ body {
                     img {
 
                         &:nth-child(1) {
+                            width: 40px;
                             left: 80.94%;
                             top: 0.37%;
                         }
 
                         &:nth-child(2) {
-                            left: 20.42%;
-                            top: 20.07%;
+                            left: 13.42%;
+                            top: 15.07%;
                         }
                     }
                 }
@@ -2058,7 +2072,7 @@ body {
 
                     .title {
                         margin-top: 43px;
-                        margin-bottom: 268px;
+                        margin-bottom: 228px;
 
                         h3 {
                             font-size: 23px;
@@ -2151,6 +2165,7 @@ body {
 
                     .information {
                         margin-bottom: 152px;
+                        text-align: center;
                     }
                 }
             }
